Move article querying to custom publicly-accessible endpoint. Move the request body to query params.
